; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_fw_bpf.c_ipfw_bpf_tap.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_fw_bpf.c_ipfw_bpf_tap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }

@V_log_if = common dso_local global %struct.ifnet* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipfw_bpf_tap(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ifnet*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.ifnet*, %struct.ifnet** @V_log_if, align 8
  store %struct.ifnet* %6, %struct.ifnet** %5, align 8
  %7 = call i32 (...) @NET_EPOCH_ASSERT()
  %8 = load %struct.ifnet*, %struct.ifnet** %5, align 8
  %9 = icmp ne %struct.ifnet* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load %struct.ifnet*, %struct.ifnet** %5, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @BPF_TAP(%struct.ifnet* %11, i32* %12, i32 %13)
  br label %15

15:                                               ; preds = %10, %2
  ret void
}

declare dso_local i32 @NET_EPOCH_ASSERT(...) #1

declare dso_local i32 @BPF_TAP(%struct.ifnet*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
